--- a/src/css/homepage.css
+++ b/src/css/homepage.css
@@ -22,7 +22,7 @@
 
 @layer docusaurus.infima {
   .plugin-pages .container {
-    max-width: calc(100vw - 102px);
+    max-width: calc(100vw - 102px) !important;
   }
 }
 .homepage-grid {
@@ -31,7 +31,7 @@
   gap: 3rem;
   align-items: center;
   min-height: 500px;
-  margin-top: 5vh;
+  margin-top: 8vh;
 }
 @media (max-width: 950px) {
   .homepage-grid {
